--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.jvmargs=-Xmx1G
 	minecraft_version=1.19.2
 	yarn_mappings=1.19.2+build.28
 	loader_version=0.14.11
+	maven_group = com.github.vaylor27
 
 # Mod Properties
 	mod_version = 1.0
